css/custom.css
#accordionWrapper {
  background: #B9D5E7;
  height: 100%;
  min-height: 2%;
  padding: 0;
}

#accordion {
  float: left;
  list-style-type: none;
  margin: 0;
  min-height: 10%;
  padding: 0;
  width: 100%;
}

#addDept {
  margin: 5px;
}

#deptDropDown {
  width: 100px
}

#bucket {
  border: 1px solid #ccc;
  border-radius: 5px;
  margin-top: 20px;
  margin-bottom: 20px;
}

#sortable {
  height: 200px;
  list-style-type: none;
}

#sortable li, #pending li {
  background: #5C86BD;
  border-radius: 10px;
  color: #ffffff;
  cursor: move;
  display: block;
  margin: 5px 5px 5px 5px;
  padding: 5px;
  text-align: center;
}

#courses {
  margin-left: 173px;
}

#table {
  margin-right: 173px;
}

#profile {
  float: left;
  margin-top: 30px;
  padding-right: 50px;
  padding-left: 50px;
  border-right: 2px solid #bbb;
}

#account {
  border-top: 2px solid #bbb;
  margin-top: 20px;
  padding-top: 40px;
  width: 100%;
}

#transfer {
  float: left;
  margin-top: 30px;
  padding-left: 50px;
}

#sortable img {
  float: right;
  visibility: hidden;
}

#sortable li:hover img {
  filter: alpha(opacity=60);  
  opacity: 0.6;
  visibility: visible;
}

#sortable li img:hover {
  cursor: pointer;
  filter: alpha(opacity=100);  
  opacity: 1.0;
}

